--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -4,3 +4,19 @@ field.required.produtos.paginas = O campo páginas é obrigatorio
 field.required.produtos.descricao = O campo descrição é obrigatorio
 field.required.produtos.descricao.teste = teste
 typeMismatch = o tipo do dado é inválido
+
+
+menu.carrinho = Seu carrinho ({0})
+menu.sobre = Sobre nós
+
+menu.pt = Português
+menu.en = English
+
+navegacao.categoria.home = Home
+navegacao.categoria.agile = Agilidade
+navegacao.categoria.front_end = Front End
+navegacao.categoria.games = Jogos
+navegacao.categoria.java = Java
+navegacao.categoria.mobile = Mobile
+navegacao.categoria.web = Web
+navegacao.categoria.outros = Outros
